k8s-rendered/odoo/service-public.yaml
apiVersion: v1
kind: Service
metadata:
  name: odoo-public
  namespace: odoo-public
spec:
  type: NodePort
  selector:
    app: odoo-public-gateway
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30080
      protocol: TCP
